kuber/nginx/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/ilyabikmetov/parking(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: parking-service
                port:
                  number: 8000
          - path: /otusapp/ilyabikmetov/dwh(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dwh-service
                port:
                  number: 8000
          - path: /otusapp/ilyabikmetov/money(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: money-service
                port:
                  number: 8000
          - path: /otusapp/ilyabikmetov/places(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: places-service
                port:
                  number: 8000
